Tue Aug 30 13:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Param_Test/server.cpp:
        * tests/Param_Test/except.cpp:
        * tests/Faults/test_i.cpp:
        * tests/Faults/ping.cpp:
        * tests/AMI_Timeouts/timeout_client.cpp:
        * tests/InterOp-Naming/Server_i.cpp:
        * tests/Bug_1476_Regression/Client_Task.cpp:
        * tests/Bug_1482_Regression/Reply_Handler.cpp:
        * tests/Big_Oneways/Session.cpp:
          Fixed emulated exception fuzz errors

Tue Aug 30 13:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/PolicyS.cpp:
          Regenerated this file and merged some of the changes caused by that,
          especially the include order

Tue Aug 30 12:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/util/utl_global.cpp:
          Fixed hasspace implementation, if an empty string was passed the
          function would loop forever. Also a space as second last character
          in the string wasn't detected

Tue Aug 30 10:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Time_Service/Server_i.cpp:
          Fixed compilation problem with emulated exceptions

Tue Aug 30 09:12:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tao/CORBALOC_Parser.cpp:
        * IIOP_Acceptor.cpp:
        * IIOP_Connection_Handler.cpp:
        * IIOP_Connector.cpp:
        * IIOP_Endpoint{.h .cpp. i}:
        * IIOP_Profile.cpp:
        * IIOP_Transport.cpp:
        * Invocation_Endpoint_Selectors.cpp:
        * MCAST_Parser.cpp:
        * orbconf.h:
        * ORB_Core.cpp:
        * params{ .h .cpp}:
        * orbsvcs/orbsvcs/IOR_Multicast.cpp:

          Added IPv6 support for TAO.

Tue Aug 30 06:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosEvent/CEC_TypedEventChannel.h:
          Fixed pragma once is obsolete warning

Tue Aug 30 01:20:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>